--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <section class="fishing-feature">
             <div class="fishing-content">
                 <h2 class="locationfinder">Don't know where to head first?</h2>
-                <img class="fishing-rod-icon" src="images/fishingRod.svg" alt="Fishing rod">
+                <img class="fishing-rod-icon" src="images/fishingrod.svg" alt="Fishing rod">
                 <button class="Gofishbutton">Fish for your next destination</button>
             </div>
         </section>
