--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/otv5lpl.css"> <!-- adobe fonts -->
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/> <!-- Map CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""> <!-- Map CSS -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script> <!-- Map -->
 
     <title>Favrskov Fishing</title>
@@ -31,7 +31,7 @@
             <div class="logo-container">
                 <a href="index.html" id="logo" class="logo">Favrskov Fishing</a>
                 <span></span>
-            <div>
+            </div>
         </nav>
     </header>
 
@@ -71,7 +71,7 @@
                 <h2>Just Getting Started?</h2>
                 <p>Buy everything you need to start fishing here!</p>
                 <a href="https://www.lystfisk.dk/" target="_blank">
-                    <button>Buy here</button>
+                    Buy here
                 </a>
             </div>
          </section>
@@ -90,7 +90,7 @@
     </a>
     <span class="bottom-divider"></span>
     <a href="subpages/svejstrup.html" class="nav-item">
-        <img src="images/Tent in the Forest.svg" alt="Svejstrup">
+        <img src="images/TentintheForest.svg" alt="Svejstrup">
         Svejstrup
     </a>
     <span class="bottom-divider"></span>
