--- a/subpages/lilleaa.html
+++ b/subpages/lilleaa.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/lilleaa.css">
 
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/> <!-- Map CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""> <!-- Map CSS -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script> <!-- Map -->
 
 
@@ -32,7 +32,7 @@
             </ul>
             <div class="logo-container">
                 <a href="../index.html" id="logo" class="logo">Favrskov Fishing</a>
-            <div>
+            </div>
         </nav>
     </header>
 
@@ -43,9 +43,9 @@
         </button>
 
         <!-- Lilleå mood section -->
-        <span class="mood">
+        <div class="mood">
             <h1>Lilleå</h1>
-        </span>
+        </div>
 
         <!-- Location Description -->
         <div class="content">
@@ -71,7 +71,7 @@
                 <div class="popup-content">
                     <span class="close" id="close-popup">&times;</span>
                     <h3 id="popup-title"></h3>
-                    <img id="popup-image" src="" alt="Fish" />
+                    <img id="popup-image" src="" alt="Fish"> <!-- error in html validator but code wont work if not empty? -->
                     <p id="popup-description"></p>
                 </div>
             </div>
@@ -92,10 +92,10 @@
                 <!-- Map of lilleåen -->
             <section class="submapsection">
                 <h2>Map</h2>
-                <span class="map-legend">
-                    <div class="legenditem" class="picniclegend"> <img src="../images/PicnicTablewhite.svg" alt="picnic table icon">Picnic</div>
-                    <div class="legenditem" class="parkinglegend"><img src="../images/Parkinglegend.svg" alt="Parking icon">Parking</div>
-                </span>
+                <div class="map-legend">
+                    <div class="legenditem" id="picniclegend"> <img src="../images/PicnicTablewhite.svg" alt="picnic table icon">Picnic</div>
+                    <div class="legenditem" id="parkinglegend"><img src="../images/Parkinglegend.svg" alt="Parking icon">Parking</div>
+                </div>
                     <div class="mapcontainer">
                         <div id="map"></div>
                     </div>
@@ -117,7 +117,7 @@
     </a>
     <span class="bottom-divider"></span>
     <a href="svejstrup.html" class="nav-item">
-        <img src="../images/Tent in the Forest.svg" alt="Svejstrup">
+        <img src="../images/TentintheForest.svg" alt="Svejstrup">
         Svejstrup
     </a>
     <span class="bottom-divider"></span>
